# akcli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  TODO.md  gen-model.sh  pyproject.toml
akcli/: __init__.py  __version__.py  api.py  cache.py  config.py  exceptions.py  main.py  typing.py  utils.py
akcli/commands/: __init__.py  _common.py  dig.py  translate.py
akcli/models/: __init__.py  _base.py  base_response.py  dig_response.py  translate_response.py
tests/: conftest.py
tests/fixtures/: __init__.py  constants.py  http_server.py
tests/fixtures/data/: dig_no_records_response.json  dig_success_response.json  edgerc.template  server-cert.crt  server-key.key  translate_30.x_codes_response.json  translate_no_logs_response.json  translate_non_30.x_codes_response.json  translate_pending_30.x_codes_response.json  translate_pending_no_logs_response.json  translate_pending_non_30.x_codes_response.json  translate_pending_response.json
tests/integration/: test_dig.py  test_general.py  test_translate.py
tests/unit/: test_api.py  test_build_table_recursive.py  test_cache.py  test_cache_item.py  test_cached_decorator.py  test_config.py  test_config_init_file.py  test_config_options.py  test_models.py
