[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = ">=2.25.0"
edgegrid-python = "*"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short --cov=akcli --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = "."
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
omit = [
    "tests/*",
    "akcli/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # Abstract methods
]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "I",     # isort
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "B",     # flake8-bugbear
  # "UP",    # pyupgrade
  "SIM",   # flake8-simplify
  "C4",    # flake8-comprehensions
  "TID",   # flake8-tidy-imports
  "PERF",  # perflint
  "RUF",   # ruff-specific
  "PTH",   # use pathlib over os.path
  "ERA",   # detect comented code
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/__init__.py" = ["F401"] # Ignore unused import warning for `__init__` file
