[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = ">=2.25.0"
edgegrid-python = "*"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short --cov=akcli --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = "."
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
omit = [
    "tests/*",
    "akcli/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # Abstract methods
]
