[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "akcli"
version = "0.1.0"
description = "Command-line interface to make requests to Akamai API."
authors = ["Javier Correa Guerrero <jcorreag@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "akcli" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32"
edgegrid-python = "^2.0"
pydantic = "^2.12"
typer = "^0.20"
rich = "^14.2"
tomli = "^2.3"
tomli-w = "^1.2"
merge-args = "^0.1"
platformdirs = "^4.4"

[tool.poetry.group.dev.dependencies]
ruff = "0.14.7"
pre-commit = "^4.3"
pytest = "^8.4"
pytest-cov = "^7.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short --cov=akcli --cov-report=term-missing --import-mode importlib"
testpaths = ["tests"]
pythonpath = "."
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
omit = [
    "tests/*",
    "akcli/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # Abstract methods
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312, py313
isolated_build = true

[testenv]
allowlist_externals = pytest
deps =
  pytest
  pytest-cov
commands =
    pytest tests/ --import-mode importlib
"""

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "I",     # isort
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "B",     # flake8-bugbear
  # "UP",    # pyupgrade
  "SIM",   # flake8-simplify
  "C4",    # flake8-comprehensions
  "TID",   # flake8-tidy-imports
  "PERF",  # perflint
  "RUF",   # ruff-specific
  "PTH",   # use pathlib over os.path
  "ERA",   # detect comented code
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/__init__.py" = ["F401"] # Ignore unused import warning for `__init__` file
